WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266733
[WebGPU] CTS validation/render_pipeline/inter_stage.html is failing
https://bugs.webkit.org/show_bug.cgi?id=266733
Summary
[WebGPU] CTS validation/render_pipeline/inter_stage.html is failing
Mike Wyrzykowski
Reported
2023-12-20 16:00:33 PST
[WebGPU] CTS validation/render_pipeline/inter_stage.html is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-20 16:00:54 PST
<
rdar://problem/119958254
>
Mike Wyrzykowski
Comment 2
2024-01-02 18:46:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22336
EWS
Comment 3
2024-01-04 22:13:17 PST
Committed
272674@main
(8862bd5e4aa7): <
https://commits.webkit.org/272674@main
> Reviewed commits have been landed. Closing PR #22336 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug