[WebGPU] CTS validation/render_pipeline/inter_stage.html is failing https://bugs.webkit.org/show_bug.cgi?id=266733 <radar://119958254>

Reviewed by Tadeu Zagallo.

Add validation for vertex-fragment interstage and add passing
exepctations now that all render_pipeline/* are passing.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/render_pipeline/inter_stage-expected.txt:
* Source/WebGPU/WGSL/Parser.cpp:
(WGSL::Parser<Lexer>::parseAttribute):
* Source/WebGPU/WGSL/WGSLShaderModule.h:
(WGSL::ShaderModule::usesFrontFacing const):
(WGSL::ShaderModule::setUsesFrontFacing):
(WGSL::ShaderModule::usesSampleIndex const):
(WGSL::ShaderModule::setUsesSampleIndex):
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::componentsForDataType):
(WebGPU::errorValidatingInterstageShaderInterfaces):
(WebGPU::Device::createRenderPipeline):
* Source/WebGPU/WebGPU/ShaderModule.h:
* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::parseFragmentReturnType):
(WebGPU::parseVertexReturnType):
(WebGPU::populateFragmentInputs):
(WebGPU::parseFragmentInputs):
(WebGPU::ShaderModule::ShaderModule):
(WebGPU::ShaderModule::fragmentInputsForEntryPoint const):
(WebGPU::ShaderModule::fragmentReturnTypeForEntryPoint const):
(WebGPU::ShaderModule::vertexReturnTypeForEntryPoint const):
(WebGPU::parseReturnType): Deleted.
(WebGPU::ShaderModule::returnTypeForEntryPoint const): Deleted.

Canonical link: https://commits.webkit.org/272674@main