Source/WebGPU/WGSL/Parser.cpp
@@ -640,10 +640,23 @@ Result<AST::Attribute::Ref> Parser<Lexer>::parseAttribute()
         auto* builtin = parseBuiltin(name);
         if (!builtin)
             FAIL("Unknown builtin value. Expected 'vertex_index', 'instance_index', 'position', 'front_facing', 'frag_depth', 'sample_index', 'sample_mask', 'local_invocation_id', 'local_invocation_index', 'global_invocation_id', 'workgroup_id' or 'num_workgroups'"_s);
-        if (*builtin == Builtin::FragDepth)
+        switch (*builtin) {
+        case Builtin::FragDepth:
             m_shaderModule.setUsesFragDepth();
-        else if (*builtin == Builtin::SampleMask)
+            break;
+        case Builtin::SampleMask:
             m_shaderModule.setUsesSampleMask();
+            break;
+        case Builtin::SampleIndex:
+            m_shaderModule.setUsesSampleIndex();
+            break;
+        case Builtin::FrontFacing:
+            m_shaderModule.setUsesFrontFacing();
+            break;
+        default:
+            break;
+        }
+
         CONSUME_TYPE(ParenRight);
         RETURN_ARENA_NODE(BuiltinAttribute, *builtin);
     }
